--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <mat-drawer-container>
-    <mat-drawer mode="side" opened>Drawer content</mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
+    <mat-drawer mode="side" opened>
+        <app-side></app-side>
+    </mat-drawer>
+    <mat-drawer-content>
+        <app-main></app-main>
+    </mat-drawer-content>
 </mat-drawer-container>
