--- a/src/theme.scss
+++ b/src/theme.scss
@@ -11,7 +11,7 @@
 
 // Fonts
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $my-custom-level: mat.define-typography-level(
   $font-family: Inter,
@@ -21,12 +21,12 @@ $my-custom-level: mat.define-typography-level(
     $letter-spacing: normal,
   );
 
-$fonts: mat.define-typography-config(
-  $headline-1: mat.define-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
+$fonts: mat.define-typography-config($headline-1: mat.define-typography-level(112px, 112px, 300, $letter-spacing: -0.05em),
     $headline-2: mat.define-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
     $headline-3: mat.define-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
     $headline-4: mat.define-typography-level(34px, 40px, 400),
     $headline-5: mat.define-typography-level(24px, 32px, 400),
+    $button: mat.define-typography-level(14px, 14px, 500, Inter, $letter-spacing: 0.0893em)
   );
 
 // Foreground Elements
@@ -259,6 +259,6 @@ $altTheme: mat.define-dark-theme((color: (primary: $theme-primary,
   font-family: 'Material Icons', 'Material Icons';
 
   .mat-badge-content {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
   }
 }
