add spacing in side component

--- a/src/app/side/side.component.scss
+++ b/src/app/side/side.component.scss
@@ -5,6 +5,10 @@
 
     mat-toolbar {
         height: 100%;
+        padding-top: 66px;
+        padding-bottom: 66px;
+
+        gap: 66px;
 
         mat-toolbar-row {
             height: unset;
