--- a/src/app/side/navigation/navigation.component.scss
+++ b/src/app/side/navigation/navigation.component.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
 
-    // app-router-link:last-child{
-    //     margin-top: auto;
-    // }
+    app-router-link:last-child{
+        margin-top: auto;
+    }
 }
