--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<app-header></app-header>
+<div class="router-outlet">
+    <router-outlet></router-outlet>
+</div>
