add shared components

--- a/src/app/admin/router-link/router-link.component.scss
+++ b/src/app/admin/router-link/router-link.component.scss
@@ -1,7 +1,8 @@
 :host{
     a {
-        display: block;
+        display: flex;
         color: #CDCDCD;
+        justify-content: flex-start;
 
         &.active-link{
             color: white;
