--- a/src/app/admin/router-link/router-link.component.html
+++ b/src/app/admin/router-link/router-link.component.html
@@ -1,3 +1,3 @@
-<a mat-button routerLinkActive="active-link" [routerLinkActiveOptions]= "{exact: true}" [routerLink]="['/'+route.path]" >
+<a mat-raised-button color="primary" routerLinkActive="active-link" [routerLinkActiveOptions]= "{exact: true}" [routerLink]="[route.path]" >
     {{ route.title }}
 </a>
