--- a/src/app/shared/shared-components/card/card.component.html
+++ b/src/app/shared/shared-components/card/card.component.html
@@ -1,11 +1,11 @@
 <mat-card>
     <mat-card-header>
         <mat-card-title>
-            <ng-content select="['title']"></ng-content>
+            <ng-content select="[title]"></ng-content>
         </mat-card-title>
 
         <mat-card-subtitle>
-            <ng-content select="['subtitle']"></ng-content>
+            <ng-content select="[subtitle]"></ng-content>
         </mat-card-subtitle>
     </mat-card-header>
 
@@ -14,6 +14,6 @@
     </mat-card-content>
 
     <mat-card-footer>
-        <ng-content select="['footer']"></ng-content>
+        <ng-content select="[footer]"></ng-content>
     </mat-card-footer>
 </mat-card>
