--- a/src/app/admin/authentication/authentication.component.scss
+++ b/src/app/admin/authentication/authentication.component.scss
@@ -1,13 +1,17 @@
 :host{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 100%;
+
+    gap: 35px;
 
     .header{
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
+        width: 100%;
     }
 }
 
