--- a/src/app/admin/authentication/log-in/log-in.component.scss
+++ b/src/app/admin/authentication/log-in/log-in.component.scss
@@ -1,3 +1,13 @@
+:host{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 500px;
+    app-card{
+        width: 100%;
+    }
+}
+
 mat-form-field {
     display: block;
     // max-width: 100%;
