--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container>
-    <mat-drawer mode="side" opened>
+    <mat-drawer mode="side" opened="false">
         <app-side></app-side>
     </mat-drawer>
     <mat-drawer-content>
