signup and login components layout style and logic

--- a/src/app/admin/authentication/log-in/log-in.component.html
+++ b/src/app/admin/authentication/log-in/log-in.component.html
@@ -51,7 +51,7 @@
 
         <div class="simple-grid">
             <mat-checkbox [formControl]="rememberMe">Remember me</mat-checkbox>
-            <a color="primary" mat-stroked-button routerLink='forgot-password'>Forgot my password</a>
+            <a color="primary" mat-stroked-button routerLink='/auth/forgot-password'>Forgot my password</a>
         </div>
 
         <div class="simple-grid">
