--- a/src/app/admin/authentication/register/register.component.scss
+++ b/src/app/admin/authentication/register/register.component.scss
@@ -14,6 +14,10 @@ mat-form-field {
     // width: 422px;
 }
 
+mat-expansion-panel{
+    margin-bottom: 16px;
+}
+
 .footer {
     display: grid;
     grid-gap: 35px;
