add api modules

--- a/src/app/admin/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/admin/authentication/forgot-password/forgot-password.component.html
@@ -1,1 +1,29 @@
-<p>forgot-password works!</p>
+<app-card>
+    <app-page-title title></app-page-title>
+    <div>Don't worry! We will send you an email with the instructions to reset your password.</div>
+
+    <form class="main-content" [formGroup]="forgotPasswordForm">
+        <mat-form-field appearance="outline">
+            <mat-label>Email</mat-label>
+            <input required maxlength="100" (focus)="resetErrorState('email')" [autocomplete]="'login-email'" type="email"
+                matInput formControlName="email" [errorStateMatcher]="customMatcher">
+            <img matTextSuffix src="assets/mail.svg" alt="">
+            <mat-error
+                *ngIf="forgotPasswordForm.get('email')?.hasError('email') && !forgotPasswordForm.get('email')?.hasError('required')">
+                Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="forgotPasswordForm.get('email')?.hasError('required')">
+                Email is <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
+    </form>
+
+    <div class="footer" footer>
+
+        <div class="simple-grid">
+            <button [disabled]="forgotPasswordForm.invalid" (click)="sendMail()" mat-raised-button color="primary">Send mail</button>
+        </div>
+
+    </div>
+
+</app-card>
