--- a/src/app/admin/authentication/register/register.component.html
+++ b/src/app/admin/authentication/register/register.component.html
@@ -53,7 +53,7 @@
 
         <mat-form-field appearance="outline">
             <mat-label>Password</mat-label>
-            <input required maxlength="100" (focus)="resetErrorState('password')" minlength="8" #password
+            <input required maxlength="100" (focus)="resetErrorState('password')" minlength="8"
                 [autocomplete]="'signup-password'" type="password" matInput formControlName="password"
                 [errorStateMatcher]="customMatcher">
             <img matTextSuffix src="assets/password.svg" alt="">
