--- a/src/app/admin/authentication/authentication.component.html
+++ b/src/app/admin/authentication/authentication.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <app-logo [light]="true"></app-logo>
     <div class="to-register">
-        Not a Join user?
+        <span class="mdc-form-field">Not a Join user?</span>
         <ng-container *ngIf="signUpRoute">
             <app-router-link [route]="signUpRoute"></app-router-link>
         </ng-container>
