--- a/src/app/admin/authentication/authentication.component.scss
+++ b/src/app/admin/authentication/authentication.component.scss
@@ -1,4 +1,5 @@
 :host{
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,6 +7,8 @@
     height: 100%;
 
     gap: 35px;
+
+    padding: 1rem 0;
 
     .header{
         display: flex;
