--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,9 @@
         width: 100%;
         height: 100%;
 
-        mat-drawer-content{
+        mat-drawer-content {
+            display: flex;
+            flex-direction: column;
             height: 100%;
         }
     }
