--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <mat-drawer-container>
-    <mat-drawer mode="side" [opened]="isLoggedIn$ | async">
+    <mat-drawer #drawer mode="side" [opened]="isLoggedIn$ | async">
         <app-side></app-side>
     </mat-drawer>
     <mat-drawer-content>
+        <app-header (toggleDrawer)="drawer.toggle()" *ngIf="isLoggedIn$ | async"></app-header>
         <app-main></app-main>
     </mat-drawer-content>
 </mat-drawer-container>
