--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,8 @@
 :host{
-    display: block;
+    display: flex;
+    justify-content: space-between;
     padding: 0 32px;
     background-color: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    padding: 16px;
 }
