--- a/src/app/shared/shared-components/dialogs/add-contact/add-contact.component.html
+++ b/src/app/shared/shared-components/dialogs/add-contact/add-contact.component.html
@@ -1,1 +1,6 @@
-<p>add-contact works!</p>
+<app-dialog>
+    <ng-container side>
+        Test Side
+    </ng-container>
+    Test Main
+</app-dialog>
