--- a/src/app/admin/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/admin/authentication/forgot-password/forgot-password.component.html
@@ -1,6 +1,7 @@
 <app-card>
-    <app-page-title title></app-page-title>
-    <div>Don't worry! We will send you an email with the instructions to reset your password.</div>
+    <app-page-title title>
+        <div>Don't worry! We will send you an email with the instructions to reset your password.</div>
+    </app-page-title>
 
     <form class="main-content" [formGroup]="forgotPasswordForm">
         <mat-form-field appearance="outline">
