fomr-field pipes for error messeging

--- a/src/app/admin/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/admin/authentication/forgot-password/forgot-password.component.html
@@ -1,28 +1,21 @@
 <app-card>
-    <app-page-title title>
-        <div>Don't worry! We will send you an email with the instructions to reset your password.</div>
-    </app-page-title>
+    <app-page-title title></app-page-title>
+
+    <div>Don't worry! We will send you an email with the instructions to reset your password.</div>
 
     <form class="main-content" [formGroup]="forgotPasswordForm">
-        <mat-form-field appearance="outline">
-            <mat-label>Email</mat-label>
-            <input required maxlength="100" (focus)="resetErrorState('email')" [autocomplete]="'login-email'" type="email"
-                matInput formControlName="email" [errorStateMatcher]="customMatcher">
-            <img matTextSuffix src="assets/mail.svg" alt="">
-            <mat-error
-                *ngIf="forgotPasswordForm.get('email')?.hasError('email') && !forgotPasswordForm.get('email')?.hasError('required')">
-                Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="forgotPasswordForm.get('email')?.hasError('required')">
-                Email is <strong>required</strong>
-            </mat-error>
-        </mat-form-field>
+        <app-form-field [errors]="[
+                {name: 'required', htmlMessage: 'Email is <strong>required</strong>'},
+                {name: 'email', htmlMessage:'Please enter a valid email address'}
+            ]" [autocomplete]="'login-email'" [type]="'email'" [inputType]="'input'" [labelName]="'Email'"
+            [suffixPath]="'assets/mail.svg'" [control]="$any(forgotPasswordForm.get('email'))"></app-form-field>
     </form>
 
     <div class="footer" footer>
 
         <div class="simple-grid">
-            <button [disabled]="forgotPasswordForm.invalid" (click)="sendMail()" mat-raised-button color="primary">Send mail</button>
+            <button [disabled]="forgotPasswordForm.invalid" (click)="sendMail()" mat-raised-button color="primary">Send
+                mail</button>
         </div>
 
     </div>
