--- a/src/app/admin/authentication/reset-password/reset-password.component.html
+++ b/src/app/admin/authentication/reset-password/reset-password.component.html
@@ -15,62 +15,34 @@
 
         </mat-expansion-panel> -->
 
-        <mat-expansion-panel>
+        <!-- <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-description>
                     Password requirements
                 </mat-panel-description>
             </mat-expansion-panel-header>
             <p>Must be at least 8 characters long</p>
-            <!-- <p>Must be a combination of letters, numbers and at least one special character.</p> -->
+            <p>Must be a combination of letters, numbers and at least one special character.</p>
 
-        </mat-expansion-panel>
+        </mat-expansion-panel> -->
 
-        <mat-form-field appearance="outline">
-            <mat-label>New Password</mat-label>
-            <input required maxlength="100" (focus)="resetErrorState('newPassword')" minlength="8"
-                [autocomplete]="'new-password'" type="password" matInput formControlName="newPassword"
-                [errorStateMatcher]="customMatcher">
-            <!-- <img matTextSuffix src="assets/password.svg" alt=""> -->
+        <app-form-field [errors]="[{name: 'required', htmlMessage: 'Password is <strong>required</strong>'},
+            {name: 'minlength', htmlMessage: 'Password is <strong>to short</strong>'}]" [autocomplete]="'new-password'"
+            [type]="'password'" [inputType]="'input'" [suffixPath]="'assets/password.svg'"
+            [control]="$any(resetPasswordForm.get('newPassword'))" [labelName]="'New Password'"
+            [minLength]="8"></app-form-field>
 
-            <mat-hint></mat-hint>
-
-            <mat-error *ngIf="resetPasswordForm.get('newPassword')?.hasError('required')">
-                Password is <strong>required</strong>
-            </mat-error>
-            <mat-error
-                *ngIf="resetPasswordForm.get('newPassword')?.hasError('minlength') && !resetPasswordForm.get('newPassword')?.hasError('required')">
-                Password is <strong>to short</strong>
-            </mat-error>
-
-        </mat-form-field>
-
-        <mat-form-field appearance="outline">
-            <mat-label>Confirm Password</mat-label>
-            <input maxlength="100" (focus)="resetErrorState('confirmPassword')"
-                [autocomplete]="'confirm-password'" type="password" matInput formControlName="confirmedPassword"
-                [errorStateMatcher]="customMatcher">
-            <!-- <img matTextSuffix src="assets/password.svg" alt=""> -->
-
-            <mat-hint></mat-hint>
-
-            <!-- <mat-error *ngIf="resetPasswordForm.get('confirmPassword')?.hasError('required')">
-                Password is <strong>required</strong>
-            </mat-error>
-            <mat-error
-                *ngIf="resetPasswordForm.get('confirmPassword')?.hasError('minlength') && !resetPasswordForm.get('confirmPassword')?.hasError('required')">
-                Password is <strong>to short</strong>
-            </mat-error> -->
-
-        </mat-form-field>
-
-
+        <app-form-field [errors]="[{name: 'required', htmlMessage: 'Password is <strong>required</strong>'}]"
+            [autocomplete]="'confirm-password'" [type]="'password'" [inputType]="'input'"
+            [suffixPath]="'assets/password.svg'" [control]="$any(resetPasswordForm.get('confirmedPassword'))"
+            [labelName]="'Confirm Password'" [minLength]="8"></app-form-field>
     </form>
 
     <div class="footer" footer>
 
         <div class="simple-grid">
-            <button [disabled]="resetPasswordForm.invalid" (click)="resetPassword()" mat-raised-button color="primary">Sign Up</button>
+            <button [disabled]="resetPasswordForm.invalid" (click)="resetPassword()" mat-raised-button
+                color="primary">Sign Up</button>
         </div>
 
     </div>
